--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -100,6 +100,17 @@ body,
   align-items: stretch;
 }
 
+// bottom-wrap
+.bottom-wrap {
+  flex: none;
+  padding: 16px 20px;
+  background-color: rgba($color-white, 0);
+  transition: background-color 0.2s;
+}
+.is-sticky .bottom-wrap {
+  background-color: rgba($color-white, 1);
+}
+
 // flex-box
 .flex-box {
   display: flex;
