--- a/src/assets/scss/components/ui/layout/PageContents.scss
+++ b/src/assets/scss/components/ui/layout/PageContents.scss
@@ -4,7 +4,8 @@
   flex-direction: column;
   align-items: stretch;
 
-  &__head {
+  &__head,
+  &__foot {
     flex: none;
   }
 
@@ -18,10 +19,5 @@
     &:last-child {
       padding-bottom: 40px;
     }
-  }
-
-  &__foot {
-    flex: none;
-    padding: 16px 20px;
   }
 }
