--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -66,6 +66,12 @@ html {
     & #app {
       overflow: hidden;
     }
+    & #app {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
   }
 }
 
