--- a/src/assets/scss/views/personalLoan/LayerPersonalLoanETCCheck.scss
+++ b/src/assets/scss/views/personalLoan/LayerPersonalLoanETCCheck.scss
@@ -1,2 +1,8 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/icon-list.scss';
+
+.icon {
+  display: block;
+  width: 36px;
+  height: 36px;
+}
