--- a/src/assets/scss/components/import/loading-icon.scss
+++ b/src/assets/scss/components/import/loading-icon.scss
@@ -18,6 +18,17 @@
     animation: spin 800ms infinite linear;
     box-sizing: border-box;
   }
+
+  &--regular {
+    width: 18px;
+    height: 18px;
+
+    &::before {
+      width: 12px;
+      height: 12px;
+      margin: 3px 2px 3px 4px;
+    }
+  }
 }
 
 @keyframes spin {
