--- a/src/assets/scss/components/ui/form/PartInput.scss
+++ b/src/assets/scss/components/ui/form/PartInput.scss
@@ -8,7 +8,7 @@
     height: 10px;
     box-sizing: border-box;
     border-radius: 50%;
-    background-color: $color-gray-40;
+    background-color: $color-black;
 
     & + & {
       margin-left: 6px;
