[DT-89] 하단 버튼 플로팅 기능 적용 및 여백 조정

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -132,6 +132,12 @@ body,
   background-color: rgba($color-white, 1);
 }
 
+// auto-bottom-wrap
+.auto-bottom-wrap {
+  flex: none;
+  margin-top: auto;
+}
+
 // flex-box
 .flex-box {
   display: flex;
