--- a/src/assets/scss/views/main/MainHome.scss
+++ b/src/assets/scss/views/main/MainHome.scss
@@ -1,5 +1,6 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/join.scss';
+@import '@/assets/scss/components/import/image-view.scss';
 
 :global(.page-home) {
   background-color: $color-gray-15;
