--- a/src/assets/scss/views/main/MainProduct.scss
+++ b/src/assets/scss/views/main/MainProduct.scss
@@ -39,3 +39,15 @@
     margin-top: 2px;
   }
 }
+
+.tag-button {
+  @include reset-button;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 8px;
+  padding-left: 64px;
+  font-size: 0;
+  line-height: 0;
+  text-align: left;
+}
