[DT-105] [Main_M01_p001] [Main_M02_p001] 즉시출고 핫딜! 영역 수정

--- a/src/assets/scss/views/main/MainHome.scss
+++ b/src/assets/scss/views/main/MainHome.scss
@@ -58,6 +58,23 @@
     100%;
 }
 
+.hot-deal-list {
+  @include reset-list;
+
+  &__item {
+    & + & {
+      margin-top: 24px;
+    }
+  }
+
+  &__block {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    padding-left: 8px;
+  }
+}
+
 .progress {
   margin-bottom: 32px;
 
