--- a/src/assets/scss/components/import/estimate-list.scss
+++ b/src/assets/scss/components/import/estimate-list.scss
@@ -107,6 +107,10 @@
     border-top: none;
   }
 
+  &__foot + &__list {
+    border-top: 1px solid $color-gray-20;
+  }
+
   &--full {
     border-left: none;
     border-right: none;
