--- a/src/assets/scss/components/ui/gnb/GlobalNav.scss
+++ b/src/assets/scss/components/ui/gnb/GlobalNav.scss
@@ -23,7 +23,6 @@
 .main-menu {
   @include reset-list;
   display: flex;
-  text-align: center;
 
   &__item {
     flex: 1;
@@ -31,6 +30,10 @@
   }
 
   &__link {
+    @include reset-button;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center;
     display: block;
     color: inherit;
     text-decoration: none;
@@ -79,8 +82,11 @@
   }
 
   &__link {
+    @include reset-button;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: left;
     display: flex;
-    text-align: center;
     color: inherit;
     text-decoration: none;
     padding: 0 4px;
