--- a/src/assets/scss/views/main/MainProduct.scss
+++ b/src/assets/scss/views/main/MainProduct.scss
@@ -1,53 +1,7 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/empty.scss';
+@import '@/assets/scss/components/import/image-view.scss';
 
 .head {
   padding: 0 20px;
-}
-
-.nav {
-  margin-bottom: 0;
-}
-
-.etc-text {
-  display: flex;
-  align-items: center;
-  @include font-size-default(13);
-  font-weight: 300;
-  color: $color-gray-80;
-  margin-top: 4px;
-
-  &__item {
-    display: block;
-  }
-
-  &__dot {
-    margin: 0 4px;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    background-color: $color-gray-80;
-  }
-}
-
-.icon-list {
-  &__block {
-    align-items: flex-start;
-  }
-
-  &__content {
-    margin-top: 2px;
-  }
-}
-
-.tag-button {
-  @include reset-button;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: 8px;
-  padding-left: 64px;
-  font-size: 0;
-  line-height: 0;
-  text-align: left;
 }
