[DT-120] [My_M03_p001] 프로그래스 바 위치 변경

--- a/src/assets/scss/components/import/inline-alert.scss
+++ b/src/assets/scss/components/import/inline-alert.scss
@@ -22,6 +22,14 @@
     color: $color-green-50;
   }
 
+  &__progress {
+    margin-top: 8px;
+
+    &:last-child {
+      padding-bottom: 4px;
+    }
+  }
+
   &--error {
     background-color: rgba($color-semantic-essential, 0.06);
 
