--- a/src/assets/scss/views/main/LayerMainFunDetail.scss
+++ b/src/assets/scss/views/main/LayerMainFunDetail.scss
@@ -1,1 +1,64 @@
 @import '@/assets/scss/components/import/board-detail.scss';
+@import '@/assets/scss/components/import/image-view.scss';
+
+.video-data {
+  position: relative;
+  margin-bottom: 24px;
+
+  &__thumb {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+
+  &__link {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('@/assets/images/icon/play.svg') no-repeat 50% 50% / 60px
+      60px;
+  }
+}
+
+.image-data {
+  margin-bottom: 24px;
+
+  :global(.swiper-pagination-bullets) {
+    margin-top: 16px;
+    position: static;
+    font-size: 0;
+    line-height: 0;
+    text-align: center;
+    letter-spacing: 0;
+  }
+
+  :global(.swiper-pagination-bullet) {
+    display: inline-block;
+    vertical-align: top;
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+    background-color: $color-gray-50;
+    transition: width 0.3s, background-color 0.3s;
+
+    & + :global(.swiper-pagination-bullet) {
+      margin-left: 5px;
+    }
+  }
+
+  :global(.swiper-pagination-bullet-active) {
+    width: 10px;
+    background-color: $color-black;
+  }
+
+  &--once {
+    :global(.swiper-pagination-bullets) {
+      display: none;
+    }
+  }
+}
