--- a/src/assets/scss/views/main/LayerMainFunDetail.scss
+++ b/src/assets/scss/views/main/LayerMainFunDetail.scss
@@ -21,7 +21,7 @@
     width: 100%;
     height: 100%;
     background: url('@/assets/images/icon/play.svg') no-repeat 50% 50% / 60px
-      60px;
+      60px rgba(0, 0, 0, 0.2);
   }
 }
 
