[DT-148] [My_M01_p004] 모바일-결제/청구정보 자동이체계좌 버튼 영역 수정 요청

--- a/src/assets/scss/views/myLoan/LayerMyLoanDetailPaymentAuto.scss
+++ b/src/assets/scss/views/myLoan/LayerMyLoanDetailPaymentAuto.scss
@@ -1,3 +1,17 @@
+.account-head {
+  position: relative;
+}
+
+.account-opener {
+  position: static;
+
+  &::before {
+    top: 0;
+    left: 0;
+    padding: 0;
+  }
+}
+
 .account-contents {
   padding: 26px 16px 0;
 }
