--- a/src/assets/scss/components/ui/form/BoxCheck.scss
+++ b/src/assets/scss/components/ui/form/BoxCheck.scss
@@ -134,9 +134,9 @@
       }
     }
 
-    &:focus {
+    &:focus-visible {
       & + .box-check__block {
-        background-color: rgba($color-navy-50, 0.08);
+        outline: 2px dotted;
       }
     }
 
