--- a/src/assets/scss/components/ui/layer/ToastAlert.scss
+++ b/src/assets/scss/components/ui/layer/ToastAlert.scss
@@ -1,16 +1,16 @@
 .toast-alert {
   position: fixed;
-  top: 67px;
   left: 0;
+  bottom: 84px;
   z-index: 99999999;
   width: 100%;
   height: 0;
 
   &__inner {
     position: absolute;
-    top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     margin: 0 20px;
   }
 
@@ -34,7 +34,7 @@
 @keyframes message-animation {
   0% {
     opacity: 0;
-    transform: translateY(-100%);
+    transform: translateY(100%);
   }
   10% {
     opacity: 1;
@@ -46,6 +46,6 @@
   }
   100% {
     opacity: 0;
-    transform: translateY(100%);
+    transform: translateY(-100%);
   }
 }
