[DT-159] [LR_M04_p001] 뱃지 수정 & 간격 수정

--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReview.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReview.scss
@@ -20,3 +20,16 @@
 .text-button-area {
   min-height: #{$line-height-default}em;
 }
+
+.top-contents {
+  margin-top: -22px;
+}
+
+.status-inquiry {
+  margin-bottom: 24px;
+}
+
+.block {
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
