--- a/src/assets/scss/views/personalLoan/PersonalLoanStock.scss
+++ b/src/assets/scss/views/personalLoan/PersonalLoanStock.scss
@@ -10,3 +10,10 @@
   margin: -30px -20px 0 -20px;
   padding: 30px 20px 40px 20px;
 }
+
+.account-guide {
+  @include font-size-button(13);
+  padding: 2px 0;
+  border-bottom: 1px solid $color-semantic-essential;
+  margin: 2px 0 0 4px;
+}
