--- a/src/assets/scss/components/ui/form/BasicDatepicker.scss
+++ b/src/assets/scss/components/ui/form/BasicDatepicker.scss
@@ -117,4 +117,18 @@
       }
     }
   }
+
+  &--direction {
+    &-right {
+      :global {
+        .duet-date__dialog {
+          html.is-date-picker-animated &,
+          &.is-active {
+            left: auto;
+            right: 0;
+          }
+        }
+      }
+    }
+  }
 }
