--- a/src/assets/scss/views/auto/LayerAutoEstimateSelectProduct.scss
+++ b/src/assets/scss/views/auto/LayerAutoEstimateSelectProduct.scss
@@ -1,2 +1,5 @@
 @import '@/assets/scss/components/import/car-info.scss';
 @import '@/assets/scss/components/import/icon-list.scss';
+@import '@/assets/scss/components/import/basic-list.scss';
+@import '@/assets/scss/components/import/contents-list.scss';
+@import '@/assets/scss/components/import/basic-table.scss';
