--- a/src/assets/scss/components/ui/form/PartInput.scss
+++ b/src/assets/scss/components/ui/form/PartInput.scss
@@ -16,20 +16,61 @@
   }
 
   &__block {
+    position: relative;
     flex: none;
-    width: rem(12);
+    width: 16px;
   }
 
-  &__dot + &__block,
-  &__block + &__dot {
+  &__dot + &__block {
     margin-left: 6px;
+  }
+
+  &__placeholder-dot {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    &-item {
+      position: relative;
+      flex: none;
+      width: 16px;
+      height: 100%;
+
+      &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        margin-top: -5px;
+        width: 10px;
+        height: 10px;
+        box-sizing: border-box;
+        border: 1px solid $color-gray-60;
+        border-radius: 50%;
+      }
+
+      &--hide {
+        &::before {
+          display: none;
+        }
+      }
+    }
   }
 
   &__input {
     @include reset-input-text;
+    position: relative;
+    z-index: 1;
     width: 100%;
     @include font-size-head(18);
     height: #{$line-height-head}em;
+    letter-spacing: 5.2667px;
 
     &[disabled] {
       color: $color-gray-40;
