--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -339,6 +339,11 @@ body,
   white-space: nowrap;
 }
 
+// break-all
+.break-all.break-all {
+  word-break: break-all;
+}
+
 // ellipsis
 .ellipsis.ellipsis {
   white-space: nowrap;
