[DT-217] [Main_M01_p001] [Main_M02_p001] 메인화면 수정

--- a/src/assets/scss/components/ui/progress/BubbleProgress.scss
+++ b/src/assets/scss/components/ui/progress/BubbleProgress.scss
@@ -22,7 +22,7 @@
       width: 0;
       height: 100%;
       border-radius: 100px;
-      background-color: $color-blue-60;
+      background-color: $color-green-30;
       transition: width 0.2s;
     }
 
@@ -36,7 +36,7 @@
       height: 12px;
       border-radius: 50%;
       border: 2px solid rgba($color-white, 0.8);
-      background-color: $color-blue-60;
+      background-color: $color-green-30;
     }
   }
 
