--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -250,3 +250,31 @@
   line-height: $line-height-button;
   letter-spacing: $letter-spacing-default;
 }
+
+// swiper-pagination-bullet
+@mixin swiper-pagination-bullet {
+  :global(.swiper-pagination-bullet) {
+    display: inline-block;
+    vertical-align: top;
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+    background-color: rgba($color-black, 0.3);
+    transition: width 0.3s, background-color 0.3s;
+
+    & + :global(.swiper-pagination-bullet) {
+      margin-left: 5px;
+    }
+  }
+
+  :global(.swiper-pagination-bullet-active) {
+    width: 10px;
+    background-color: $color-black;
+  }
+
+  :global(.swiper-pagination-clickable) {
+    :global(.swiper-pagination-bullet) {
+      cursor: pointer;
+    }
+  }
+}
