--- a/src/assets/scss/views/main/LayerMainNotice002.scss
+++ b/src/assets/scss/views/main/LayerMainNotice002.scss
@@ -57,22 +57,13 @@
     text-align: center;
   }
 
-  :global(.swiper-pagination-bullet) {
-    display: inline-block;
-    vertical-align: top;
-    width: 6px;
-    height: 6px;
-    border-radius: 3px;
-    background-color: rgba($color-white, 0.3);
-    transition: width 0.3s, background-color 0.3s;
+  @include swiper-pagination-bullet;
 
-    & + :global(.swiper-pagination-bullet) {
-      margin-left: 5px;
-    }
+  :global(.swiper-pagination-bullet) {
+    background-color: rgba($color-white, 0.3);
   }
 
   :global(.swiper-pagination-bullet-active) {
-    width: 10px;
     background-color: $color-white;
   }
 }
