[DT-256] main 중고차 구입 자금대출 영역 버튼 수정

--- a/src/assets/scss/views/main/MainHome.scss
+++ b/src/assets/scss/views/main/MainHome.scss
@@ -289,7 +289,7 @@
 
   &--used-auto {
     color: $color-white;
-    border-color: rgba(2, 8, 41, 0.3);
+    border-color: transparent;
     background-color: rgba(2, 8, 41, 0.3);
   }
 
