[DT-278] 하단에 다이렉트 장기렌터카 상품안내, 진행절차, 유의사항 추가

--- a/src/assets/scss/views/auto/AutoHotDeal.scss
+++ b/src/assets/scss/views/auto/AutoHotDeal.scss
@@ -1,4 +1,8 @@
 @import '@/assets/scss/components/import/empty.scss';
+@import '@/assets/scss/components/import/basic-list.scss';
+@import '@/assets/scss/components/import/step.scss';
+@import '@/assets/scss/components/import/contents-list.scss';
+@import '@/assets/scss/components/import/basic-table.scss';
 
 .icon {
   display: block;
