[DT-281] 하나머니 소개 화면 업데이트

--- a/src/assets/scss/views/myInfo/MyInfoJoinHanaMoney.scss
+++ b/src/assets/scss/views/myInfo/MyInfoJoinHanaMoney.scss
@@ -1,2 +1,3 @@
 @import '@/assets/scss/components/import/authority.scss';
 @import '@/assets/scss/components/import/image-view.scss';
+@import '@/assets/scss/components/import/basic-list.scss';
