[DT-284] [AF_M00_l008] [AF_M02_p001] [AF_M43_p001] 상품안내 수정

--- a/src/assets/scss/components/ui/text/KeyValue.scss
+++ b/src/assets/scss/components/ui/text/KeyValue.scss
@@ -120,6 +120,16 @@
       }
     }
 
+    &-regular-small {
+      > .key-value__list {
+        > .key-value__item {
+          > .key-value__key {
+            width: 53px;
+          }
+        }
+      }
+    }
+
     &-medium {
       > .key-value__list {
         > .key-value__item {
