--- a/src/assets/scss/views/auto/LayerAutoEstimateSelectProduct.scss
+++ b/src/assets/scss/views/auto/LayerAutoEstimateSelectProduct.scss
@@ -3,6 +3,7 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/contents-list.scss';
 @import '@/assets/scss/components/import/basic-table.scss';
+@import '@/assets/scss/components/import/step.scss';
 
 .accordion-contents {
   padding: 24px 0 8px;
