--- a/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemCreditCheckRequest.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LayerLeaseRentEstimationSystemCreditCheckRequest.scss
@@ -1,3 +1,11 @@
+.appoint-wrap {
+  dt {
+    top: 32px;
+  }
+}
+
 .appoint-btn {
-  width: 110px;
+  width: 64px;
+  min-height: 34px;
+  @include font-size-default(15);
 }
