[DT-294] 배너영역 수정

--- a/src/assets/scss/components/import/image-view.scss
+++ b/src/assets/scss/components/import/image-view.scss
@@ -1,6 +1,11 @@
 .image-view {
   display: block;
 
+  &--img-width {
+    max-width: 360px;
+    margin: 0 auto;
+  }
+
   img {
     display: block;
     max-width: 100%;
