--- a/src/assets/scss/views/myLoan/MyLoanHome.scss
+++ b/src/assets/scss/views/myLoan/MyLoanHome.scss
@@ -2,6 +2,7 @@
 @import '@/assets/scss/components/import/inline-alert.scss';
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/logs.scss';
+@import '@/assets/scss/components/import/image-view.scss';
 
 .head {
   padding: 12px 0 8px 0;
