--- a/src/assets/scss/views/identification/Common_M00_l055.scss
+++ b/src/assets/scss/views/identification/Common_M00_l055.scss
@@ -1,3 +1,4 @@
+@import '@/assets/scss/components/import/basic-table.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
 
 .header {
